--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
     <!-- 特殊情況：passwordSuccess 顯示等待動畫 -->
     @if (step.id === 'passwordSuccess') {
       <mat-progress-bar class="progress-bar" mode="indeterminate" color="accent"></mat-progress-bar>
-      <p style="margin-top:10px; font-weight: bold; color: white;" class="progress-text">
+      <p style="margin-top:10px; font-weight: bold;   color: #7e6959;" class="progress-text">
         {{ statusMsg }}
       </p>
     }
