--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -188,7 +188,8 @@
 
   .progress-text {
     margin-left: 3px;
-    text-align: center;    // 文字水平置中
+    text-align: center; 
+    // 文字水平置中
   }///////////////
   /* 整体背景样式 */
 
