修改預排班一鍵同意

--- a/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
+++ b/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
@@ -18,10 +18,9 @@
     >
       返回
     </button>
+    <button class="btn-bg-secondary" mat-button (click)="acceptAllPending()">一鍵同意</button>
+
   </div>
 </div>
-<!-- ????? -->
-<div class="daypilot-scheduler-wrapper">
 
-  <daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
-</div>
+<daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
