--- a/src/app/@Dialog/check/check.html
+++ b/src/app/@Dialog/check/check.html
@@ -1,5 +1,5 @@
 <div class="check-wrapper">
-  <p>確定要自動產生排班？</p>
+  <p style="font-size: medium;" mat-dialog-title>{{data.title}}</p>
 
   <div class="check-wrapper-btn">
     <button class="btn-ap" (click)="AutoShift()">確定</button>
